--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -19,15 +19,19 @@ h3{
 }
 
 button{
-    border-radius: 15px;
+    border-radius: 10px!important;
+    padding: 5px 10px;
+    color: #fff;
+    border: none;
+    font-size: 20px!important;
 }
 
 /* Navbar */
 
 nav{
     background-color: #fff;
-    padding-right:8%;
-    padding-left: 8%;;
+    padding-right:9%;
+    padding-left: 9%;;
 }
 
 .nav-right{
@@ -62,14 +66,48 @@ nav .p2{
     display: none;
 }
 
-.dropdown{
+
+
+
+
+.p-g{
+    font-size: 20px;
+    margin-right: 2rem;
 }
 
-.dropdown-menu{
-    position: relative;
+.p-g:hover, .p-g:active, .p-g:visited, .p-g:focus{
+    /* Fallback: Set a background color. */
+    background-color: #fff;
+    
+    /* Create the gradient. */
+    background-image: linear-gradient(90deg, rgba(250,124,1,1) 50%, rgba(63,42,215,1) 100%)!important;
+    
+    /* Set the background size and repeat properties. */
+    background-size: 100%!important;
+    background-repeat: repeat!important;
+  
+    /* Use the text as a mask for the background. */
+    /* This will show the gradient as a text color rather than element bg. */
+    background-clip: text;
+    -webkit-background-clip: text!important;
+    -webkit-text-fill-color: transparent!important; 
+    -moz-background-clip: text!important;
+    -moz-text-fill-color: transparent!important;
+
+    display: inline-block!important;
+
+    text-decoration: underline;
 }
 
 
-.dropdown-menu[data-bs-popper]{
-    right: 0;
+.btn-create{
+    background-color: #54C470;
+    border-color: #54C470;
+}
+
+
+/* Main */
+
+main{
+    background-color: #F2F2F2;
 }
