--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -311,3 +311,71 @@ p.user-name{
     height: 272px;
     align-self: end ;
 }
+
+
+
+@media (max-width:768px) {
+    .grid-main{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3, auto);
+        grid-row-gap: 40px;
+    }
+
+    main .calender{
+        grid-column: 1/-1;
+        grid-row: 1/2; 
+    }
+
+    main .left{
+        grid-column: 1/-1;
+        grid-row: 2/3;
+    }
+
+    main .bottom-left{
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    main .bottom-right{
+        grid-column: 2/3;
+        grid-row: 3/4; 
+    }
+}
+
+@media (max-width:575px) {
+
+    nav{
+        display: none!important;
+    }
+    .grid-main{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, auto);
+        grid-row-gap: 40px;
+    }
+
+    main .calender{
+        grid-column: 1/-1;
+        grid-row: 1/2; 
+    }
+
+    main .left{
+        grid-column: 1/-1;
+        grid-row: 2/3;
+    }
+
+    main .bottom-left{
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    main .bottom-right{
+        grid-column: 1/2;
+        grid-row: 4/5; 
+    }
+
+    .left-top{
+        padding: 0;
+        justify-content: center!important;
+    }
+
+}
