--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -117,34 +117,37 @@ nav .p2{
 .p-g{
     font-size: 20px;
     margin-right: 2rem;
-    text-decoration: underline;
+    color:#777777;
+    position: relative;
+    padding-bottom: 2px;
+    text-decoration: none;
 }
 
 .p-g:hover, .p-g:active, .p-g:visited, .p-g:focus{
-    /* Fallback: Set a background color. */
-    background-color: #fff;
-    
-    
-    /* Create the gradient. */
+   
+    background-color: #fff; 
     background-image: linear-gradient(90deg, rgba(250,124,1,1) 50%, rgba(63,42,215,1) 100%)!important;
-    
-    /* Set the background size and repeat properties. */
     background-size: 100%!important;
     background-repeat: repeat!important;
-  
-    /* Use the text as a mask for the background. */
-    /* This will show the gradient as a text color rather than element bg. */
-    background-clip: text;
+     background-clip: text;
     -webkit-background-clip: text!important;
     -webkit-text-fill-color: transparent!important; 
     -moz-background-clip: text!important;
     -moz-text-fill-color: transparent!important;
-
     display: inline-block!important;
 
-    text-decoration: underline;
 }
 
+.p-g:hover::after, .p-g:active::after, .p-g:visited::after, .p-g:focus::after{
+    content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  background: #444;
+  background: linear-gradient(90deg, rgba(250,124,1,1) 50%, rgba(63,42,215,1) 100%)!important;
+}
 
 .btn-create{
     background-color: #54C470;
@@ -168,8 +171,8 @@ nav .p2{
     }
 
     .user-img-div{
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
         border-radius: 5px;
         overflow: hidden;
     }
@@ -179,32 +182,27 @@ nav .p2{
     }
 
     .around-icon{
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
         border-radius: 5px;
-        margin-right: 5px;
-        /* display: grid; */
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
+        margin-right: 5px;      
     }
 
     .around-icon i{
         position: relative;
-        bottom: 4px;
-        grid-column: 1/2;
-        grid-row: 1/2;
+        padding: 0;
     }
 
     .num{
         border-radius: 50%;
-        width: 7px;
-        height: 7px;
+        width: 12px;
+        height: 12px;
         background-color: #FF7F00;
         grid-column: 1/2;
         grid-row: 1/2;
         position: absolute;
-        top: 60px;
-        margin-left: 7px;
+        top: 55px;
+        margin-left: 15px;
     }
 
     .num span{
@@ -212,6 +210,11 @@ nav .p2{
         color: white;
         position: relative;
         top: 0.6px;
+    }
+
+    .navbar-brand img{
+        width: 51px;
+        height: 30px;
     }
 }
 
