--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -74,6 +74,10 @@ nav{
     padding-left: 9%;;
 }
 
+.brand-logo{
+    width: 100px;
+}
+
 .nav-right{
  justify-content: flex-end;
 }
@@ -106,6 +110,37 @@ nav .p2{
 
 .dropdown-toggle::after{
     display: none;
+}
+
+.around-icon{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    margin-right: 5px;      
+}
+
+.around-icon i{
+    position: relative;
+    padding: 0;
+}
+
+.num{
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background-color: #FF7F00;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    position: absolute;
+    top: 60px;
+    margin-left: 15px;
+}
+
+.num span{
+    font-size: 10px;
+    color: white;
+    position: relative;
+    top: 0.6px;
 }
 
 
@@ -156,6 +191,10 @@ nav .p2{
 
 
 @media (max-width:575px) {
+    .brand-logo{
+        width: 70px;
+    }
+
     .p-g{
         margin-right: 7px;
         font-size: 15px;
@@ -201,7 +240,7 @@ nav .p2{
         grid-column: 1/2;
         grid-row: 1/2;
         position: absolute;
-        top: 55px;
+        top: 35px;
         margin-left: 15px;
     }
 
@@ -266,6 +305,7 @@ main .calender{
     grid-row: 1/2;
     border-width: 1px;
     justify-self: end;
+    align-self: start;
 }
 
 main .bottom-left{
@@ -435,6 +475,7 @@ p.user-name{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, auto);
         grid-row-gap: 40px;
+        padding-top: 9%;
     }
 
     main .calender{
