--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -1,3 +1,5 @@
+
+
 body{
     font-family: 'Nunito Sans', sans-serif;
     width: 100vw;
@@ -72,6 +74,11 @@ nav{
     background-color: #fff;
     padding-right:9%;
     padding-left: 9%;;
+}
+
+.navbar{
+    position: relative;
+    z-index: 5;
 }
 
 .brand-logo{
@@ -530,4 +537,59 @@ p.user-name{
 
     }
 
+}
+
+.menu{
+    position: absolute;
+    top: -100%;
+    right: 9%;
+    border-color:#979797;
+    border-style: solid;
+    border-width: 0.1px;
+    border-radius: 10px;
+    padding: 12px 0;
+    z-index: 0;
+    background-color: white;  
+    display: none;
+}
+
+.menu a {
+    color: black;
+    text-decoration: none;
+    font-weight: 200;
+    font-size: 14px;
+    display: flex;
+    align-content: center;
+}
+
+.menu i:before{
+    font-size: 20px;
+}
+.flaticon-user:before, .flaticon-group:before{
+    color: #FF7F00;
+}
+.flaticon-rocket:before{
+    color: #54C470;
+}
+
+.animate{
+    /* position: absolute;
+    right: 9%;
+    top: 100%;
+    display: block; */
+    transform: translateY(265px);
+    opacity: 1;
+    display: block;
+    position: absolute;
+    right: 9%;
+    transition-duration: 1s;
+}
+
+.menu div:hover{
+    background-color: #F5EDED;
+    color: #FF7F00;
+}
+
+.menu div:hover a{
+    color: #FF7F00;
 }
