--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -290,6 +290,30 @@ nav .p2{
   background: linear-gradient(90deg, rgba(250,124,1,1) 50%, rgba(63,42,215,1) 100%)!important;
 }
 
+.p-g-open{
+    background-color: #fff; 
+    background-image: linear-gradient(90deg, rgba(250,124,1,1) 50%, rgba(63,42,215,1) 100%)!important;
+    background-size: 100%!important;
+    background-repeat: repeat!important;
+     background-clip: text;
+    -webkit-background-clip: text!important;
+    -webkit-text-fill-color: transparent!important; 
+    -moz-background-clip: text!important;
+    -moz-text-fill-color: transparent!important;
+    display: inline-block!important;
+}
+
+.p-g-open::after{
+    content: "";
+    position: absolute;
+    bottom: 2px;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background: #444;
+    background: linear-gradient(90deg, rgba(250,124,1,1) 50%, rgba(63,42,215,1) 100%)!important;  
+}
+
 .btn-create{
     background-color: #54C470;
     border-color: #54C470;
@@ -668,7 +692,7 @@ p.user-name{
 }
 
 .appoint{
-    padding: 5% 9%;
+    padding: 2.5% 9% 5% 9%;
     background-color: #F2F2F2;
 }
 
