--- a/styles/dash-schedule-event.css
+++ b/styles/dash-schedule-event.css
@@ -399,9 +399,41 @@ nav .p2{
     .nav-2-1{
         position: absolute;
         left: 9%;
-        top: 11.3%;
+        top: 23%;
     }  
 
+    .underline{
+        font-size: 18px;
+    }
+
+    .serv-st{
+        font-size: 14px;
+    }
+  
+    .slider:before {
+      height: 16px;
+      width: 16px;
+     }
+  
+    /* Rounded sliders */
+    .slider.round {
+      height: 24px;
+      width: 50px;
+     margin-top: 5px;
+    }
+    
+
+    .label-font-14{
+        font-size: 14px;
+    }
+    .inp-width{
+        font-size: 12px;
+    }
+
+    .color-btn{
+        width: 20px!important;
+        height: 20px!important;
+    }
 
 }
 
