spacing in nav bottom

--- a/styles/dash-schedule-event.css
+++ b/styles/dash-schedule-event.css
@@ -401,6 +401,10 @@ nav .p2{
         left: 9%;
         margin-top: 15px;
     }  
+    .nav-2-3{
+        
+        margin-top: -10px;
+    } 
 
     .underline{
         font-size: 18px;
